--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation 'androidx.room:room-runtime:2.4.0'
     implementation 'com.google.android.gms:play-services-maps:18.0.1'
     implementation 'com.google.firebase:firebase-storage:20.0.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -44,4 +45,6 @@ dependencies {
 
     implementation 'com.google.maps.android:android-maps-utils:2.2.3'
     implementation 'com.squareup.picasso:picasso:2.5.2'
+
+    implementation 'com.github.chrisbanes:PhotoView:2.3.0'
 }
